# password-manager

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
src/: home.html  index.html  main.js  main.ts  main.tsx  spinner.css  styles.css  styles.scss
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: account.rs  config.rs  crypt.rs  error.rs  errors.rs  file.rs  frontend.rs  global.rs  m_openssl.rs  main.rs  state.rs  tests.rs
src-tauri/src/utils/: backup.rs  mcsv.rs  mod.rs
src/css/: spinner.css
src/modules/: App.tsx
src/modules/components/: actions.tsx  add.tsx  button.tsx  input.tsx  loading.tsx  modal.tsx  moresettings.tsx  notification.tsx  password.tsx  rows.tsx  save.tsx  searchbar.tsx
src/pages/: home.html
src/scripts/: binder.ts  helper.js  home.js  home.ts  utils.ts
src/styles/: styles.css
src/utils/: dialog.ts  invoker.ts
