[package]
name = "password-manager"
version = "1.0.0"
description = "A simple manager for storing passwords"
authors = ["Mark Asuncion"]
license = "MIT LICENSE"
repository = "https://github.com/Mark-Asuncion/password-manager"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-save", "dialog-message", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = { version = "0.10.64", features = ["vendored"] }
csv = "1.3.0"
chrono = "0.4.38"
tar = "0.4.41"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
